<resources>
    <string name="app_name">MyRPE Assistant</string>
    <string name="title_home">Entrenamientos</string>
    <string name="title_dashboard">Estadísticas</string>
    <string name="title_notifications">Estadísticas</string>
    <string name="title_perfil">Perfil</string>
    <string name="todo">TODO</string>
    <string name="title_insertar_sesion_activity">Nuevo Entrenamiento</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="insertar_sesi_n">Insertar Sesión</string>
    <string name="titulo_de_la_sesi_n">Título del entrenamiento:</string>
    <string name="titulo">Título</string>
    <string name="rpe_de_la_sesi_n">RPE del entrenamiento</string>
    <string name="rpe">RPE Objetivo</string>
    <string name="insertar">Insertar</string>
    <string name="id">ID</string>
    <string name="title_activity_vista_ejercicio">Lista de Ejercicios</string>
    <string name="action_settings">Settings</string>
    <string name="Perfil"> Perfil </string>
    <string name="nombre">Nombre:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="g_nero">Género</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso actual</string>
    <string name="email">Email</string>
    <string name="title_activity_inicio_">Inicio_Activity</string>
    <string name="nombre_inicio">Nombre:</string>
    <string name="escriba_su_nombre">Escriba su nombre</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="estatura_en_cm">Estatura en cm</string>
    <string name="peso_en_kg">Peso en Kg</string>
    <string name="pantalla_configuraci_n">Pantalla Configuración</string>
    <string name="siguiente">Siguiente</string>
    <string name="insertar_ejercicio">Crear nuevo ejercicio</string>
    <string name="editar_ejercicio">Editar ejercicio</string>
    <string name="title_activity_insertar_nuevo_ejercicio">Insertar Nuevo Ejercicio</string>
    <string name="nuevo_ejercicio">Nuevo ejercicio</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="n_mero_sesiones">Número Sesiones</string>
    <string name="n_mero_de_sets">Número de series</string>
    <string name="n_mero_de_series">Número de series</string>
    <string name="n_mero_de_repeticiones">Número de repeticiones</string>
    <string name="rpe_del_ejercicio">Rpe del Ejercicio</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="set">series</string>
    <string name="titulo_">Título</string>
    <string name="de">de</string>
    <string name="sets">Series</string>
    <string name="rep">Rep</string>
    <string name="RPE">RPE</string>
    <string name="guardar_edicion">Guardar Edición</string>
    <string name="eliminar_ejercicio">Eliminar ejercicio</string>
    <string name="Editar_ejercicio_activity">Edición de Ejercicio</string>
    <string name="InsertarNuevoEjercicio_activity">Crear Nuevo Ejercicio</string>
    <string name="eliminar_sesion">Eliminar Entrenamiento</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="fecha">%1$/%2$/%3$</string>
    <string name="muestra_ejercicio"> %1$/%2$ </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="tipo_actividad">Tipo Actividad</string>
    <string name="iniciar_entrenamiento">Iniciar Entrenamiento</string>
    <string name="stop">Stop</string>
    <string name="ndice_de_monoton_a">Índice de monotonía</string>
    <string name="tiempo">Tiempo:</string>
    <string name="num">Num</string>
    <string name="rpe_objetivo">RPE objetivo</string>
    <string name="aerobico">AEROBICO</string>
    <string name="editar_datos">Editar perfil</string>
    <string name="por_d_as">Por días</string>
    <string name="ltimos_7_d_as">Últimos 7 días</string>
    <string name="ltimos_14_d_as">Últimos 14 días</string>
    <string name="ltimos_21_d_as">Últimos 21 días</string>
    <string name="ltimos_31_d_as">Últimos 31 días</string>
    <string name="datos_a_mostrar">---Datos a mostrar</string>
    <string name="ndice_de_fatiga">Índice de fatiga</string>
    <string name="configurar">Ajustes</string>
    <string name="exportar_datos_a_excel">Exportar datos a excel</string>
    <string name="nuevo_peso">Nuevo peso</string>
    <string name="informaci_n">Información</string>
    <string name="para_m_s_informaci_n">Para más información <a href="https://www.google.com">nuestra página web</a>.</string>
    <string name="indice_de_monoton_a">El índice de monotonía es una medida de la variabilidad diaria del entrenamiento
        que se ha comprobado que está relacionada con el inicio o la aparición de síntomas de sobreentrenamiento
        cuando un entrenamiento con un alto índice de monotonía es combinado con altas cargas de entrenamiento (Foster, 1998).
        El índice de monotonía del entrenamiento se calcula dividiendo la media de la carga de entrenamiento de
        los días de la semana con respecto a la desviación estandar de la carga de entrenamiento de esa semana.</string>
    <string name="el_ndice_de_fatiga">El índice de "Fatiga", está relacionado con el sobreentrenamiento
        y la aparición de problemas físicos en atletas de élite (Foster, 1998), puede ser calculado
        mediante el producto de la carga de entrenamiento y el índice de monotonía</string>
    <string name="en_resumen">En resumen, podremos adquirir un mejor conocimiento del stress fisiológico que
        soportamos. Lograremos conocer la tolerancia y adaptación a las cargas, seremos capaces de aplicar cargas
        más adecuadas y conseguiremos una mejora del rendimiento, se disminuye la posibilidad de
        sobreentrenamiento y lesiones.</string>
</resources>