<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.apprpe.ScrollingActivity">
    <item
        android:id="@+id/action_editar"
        android:orderInCategory="100"
        android:title="@string/editar_datos"
        app:showAsAction="never" />
     <item
        android:id="@+id/action_configuracion"
        android:orderInCategory="400"
        android:title="@string/configurar"
        app:showAsAction="never" />

    <item
        android:id="@+id/nuevo_peso"
        android:orderInCategory="200"
        android:title="@string/nuevo_peso"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exportar"
        android:orderInCategory="300"
        android:title="@string/exportar_datos_a_excel"
        app:showAsAction="ifRoom"
        android:icon="@drawable/xlsx_file_icon"/>

</menu>