<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintHorizontal_bias="1.0"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <TextView
            android:id="@+id/Nombre_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/titulo"
            android:textSize="20sp"
            card_view:layout_constraintStart_toEndOf="@+id/imageView3"
            card_view:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/Num_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/num"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/textView_title_numejercicios"
            card_view:layout_constraintStart_toEndOf="@+id/textView_title_numejercicios" />

        <TextView
            android:id="@+id/RPE_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RPE"
            android:textSize="35sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/textView_title_numejercicios"
            card_view:layout_constraintEnd_toEndOf="@+id/textView9"
            card_view:layout_constraintStart_toStartOf="@+id/textView9"
            card_view:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView_title_numejercicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/tiempo"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView3"
            card_view:layout_constraintStart_toStartOf="@+id/Nombre_textView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/rpe_objetivo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/Nombre_textView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@mipmap/ejercicio_aerobico2"
            android:contentDescription="@string/aerobico" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
